[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/github-integration/scenes/RedBtn.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/github-integration/scenes/GreenBtn.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/github-integration/scripts/SignIn.gd" type="Script" id=3]
[ext_resource path="res://addons/github-integration/github-logo.png" type="Texture" id=4]
[ext_resource path="res://addons/github-integration/resources/themes/GitHubTheme-Dark.tres" type="Theme" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
draw_center = false

[node name="SingIn" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SignInRequest" type="HTTPRequest" parent="."]

[node name="DownloadRequest" type="HTTPRequest" parent="."]

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.160784, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FieldContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = 16.0
margin_right = -314.0
margin_bottom = -16.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="signin_panel" type="VBoxContainer" parent="FieldContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 370.0
margin_bottom = 548.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GithubLogo" type="TextureRect" parent="FieldContainer/signin_panel"]
margin_right = 350.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 60 )
texture = ExtResource( 4 )
stretch_mode = 4

[node name="LogoText" type="Label" parent="FieldContainer/signin_panel"]
margin_top = 132.0
margin_right = 350.0
margin_bottom = 154.0
size_flags_horizontal = 3
text = "Sign-in to GitHub"
align = 1

[node name="EmailLbl" type="Label" parent="FieldContainer/signin_panel"]
margin_top = 158.0
margin_right = 43.0
margin_bottom = 180.0
size_flags_horizontal = 0
text = "Email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mail" type="LineEdit" parent="FieldContainer/signin_panel"]
margin_top = 184.0
margin_right = 350.0
margin_bottom = 216.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
clear_button_enabled = true
placeholder_text = "Insert your e-mail..."
placeholder_alpha = 0.4

[node name="SEPARATOR" type="HSeparator" parent="FieldContainer/signin_panel"]
margin_top = 220.0
margin_right = 350.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 3 )
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 8

[node name="Token" type="HBoxContainer" parent="FieldContainer/signin_panel"]
margin_top = 232.0
margin_right = 350.0
margin_bottom = 254.0

[node name="TokenLbl" type="Label" parent="FieldContainer/signin_panel/Token"]
margin_right = 46.0
margin_bottom = 22.0
size_flags_horizontal = 0
text = "Token"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnCreateToken" type="LinkButton" parent="FieldContainer/signin_panel/Token"]
margin_left = 267.0
margin_top = 8.0
margin_right = 350.0
margin_bottom = 22.0
size_flags_horizontal = 14
size_flags_vertical = 8
text = "Create Token"
underline = 1

[node name="Password" type="LineEdit" parent="FieldContainer/signin_panel"]
margin_top = 258.0
margin_right = 350.0
margin_bottom = 290.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
secret = true
clear_button_enabled = true
placeholder_text = "Insert your token..."
placeholder_alpha = 0.4

[node name="SEPARATOR1" type="HSeparator" parent="FieldContainer/signin_panel"]
margin_top = 294.0
margin_right = 350.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 3 )
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="FieldContainer/signin_panel"]
margin_top = 308.0
margin_right = 350.0
margin_bottom = 338.0
alignment = 1

[node name="btnSignIn" parent="FieldContainer/signin_panel/HBoxContainer3" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 332.0
margin_bottom = 30.0
disabled = true
text = "Sign In"

[node name="logfile" type="Label" parent="FieldContainer/signin_panel/HBoxContainer3"]
margin_left = 336.0
margin_top = 8.0
margin_right = 350.0
margin_bottom = 22.0
hint_tooltip = "A logfile has been found! Just press \"Sign-in\" without filling the fields."
mouse_filter = 1
size_flags_horizontal = 8
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0.92549, 0.133333, 0.392157, 1 )
text = "!"

[node name="SEPARATOR2" type="HSeparator" parent="FieldContainer/signin_panel"]
margin_top = 342.0
margin_right = 350.0
margin_bottom = 357.0
rect_min_size = Vector2( 0, 15 )
custom_styles/separator = SubResource( 1 )

[node name="singup" type="LinkButton" parent="FieldContainer/signin_panel"]
margin_left = 69.0
margin_top = 361.0
margin_right = 281.0
margin_bottom = 375.0
size_flags_horizontal = 4
text = "Don't have a GitHub account yet?"
underline = 1

[node name="SEPARATOR3" type="HSeparator" parent="FieldContainer/signin_panel"]
margin_top = 379.0
margin_right = 350.0
margin_bottom = 383.0
rect_min_size = Vector2( 0, 3 )
custom_styles/separator = SubResource( 1 )

[node name="error" type="Label" parent="FieldContainer/signin_panel"]
visible = false
margin_top = 305.0
margin_right = 464.0
margin_bottom = 319.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0, 0.235294, 1 )
text = "Error: "
align = 1

[node name="DeleteDataBtn" parent="FieldContainer/signin_panel" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 498.0
margin_right = 350.0
margin_bottom = 528.0
size_flags_vertical = 10
text = "Delete User Data"

[node name="DeleteHover" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeletePopup" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -185.5
margin_top = -35.0
margin_right = 185.5
margin_bottom = 35.0
window_title = "Delete User Data"
dialog_text = "Are you sure you want to delete your current user data?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="FieldContainer/signin_panel/singup" to="." method="_on_singup_pressed"]
